tests/paczka1/fuzzy1/59653040.err
Error in line 6: WDxÄS124Ä43,4
Error in line 5: XCmR S468 33,1
Error in line 7: F19JeGrw S124 67,1
Error in line 32: bTPQVO S496 21,5
